# Taproot-Optimized-Payjoin-Receiver

./: Cargo.toml  README.md
src/: cli.rs  config.rs  logging.rs  main.rs  persistence.rs  protocol.rs  rpc.rs  session.rs
src/coin_selection/: decorrelation.rs  mod.rs  scorer.rs  script_types.rs  strategies.rs
src/tui/: app.rs  event.rs  mod.rs  ui.rs
